--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
+
   },
   "eslintConfig": {
     "extends": [
