--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.0.18",
+    "sweetalert2-react-content": "^4.1.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -31,7 +33,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
-
   },
   "eslintConfig": {
     "extends": [
