--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.18",
     "sweetalert2-react-content": "^4.1.0",
@@ -32,9 +31,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
